<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bruteforce.blossom.MainActivity">

    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_person_black"
        app:showAsAction="ifRoom"
        tools:ignore="MenuTitle" />
</menu>
