...
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Current Password" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
...
